fix(styles): cloze text wrapping (#18)

--- a/scss/components/_flashcard.scss
+++ b/scss/components/_flashcard.scss
@@ -198,7 +198,7 @@
 
 /* CLOZE TEXT */
 .cloze-answer .cloze {
-  display: inline-block;
+  display: inline;
   opacity: 0;
   filter: brightness(0.85);
   transform: translateY(2px); /* Tiny lift */
